--- a/css/js-image-slider.css
+++ b/css/js-image-slider.css
@@ -1,128 +1,66 @@
 /* http://www.menucool.com */
 
-/*slider frame*/
-#sliderFrame {
-    position:relative;
-    width:880px;
-    background-color: #DBDBDB;
+#sliderFrame, #sliderFrame div {
+    box-sizing: content-box;
 }
-
-.inner-slider #sliderFrame {
-    position:relative;
-    width: 585px;
-    background-color: #000;
-}     
-        
-
-#slider {
-    width:880px;height:444px;/* Make it the same size as your images */
-	background:transparent url(ico-loading.gif) no-repeat 50% 50%;
-	position:relative;
-	margin:0 auto;/*this makes the image slider center-aligned. Remove this line if you want to align the whole slider to the left side*/
-}
-.inner-slider #slider {
-    width:280px;height:350px;/* Make it the same size as your images */
-    background:transparent url(ico-loading-2.gif) no-repeat 50% 50%;
-}
-#slider img {
-	position:absolute;
-	border:none;
-	visibility:hidden;
-}
-
-/* the link style (if slide image is wrapped in a link) */
-#slider a.imgLink {
-	z-index:2;
-	display:none;position:absolute;
-	top:0px;left:0px;border:0;padding:0;margin:0;
-	width:100%;height:100%;
-}
-
-/* Caption styles */
-div.mc-caption-bg, div.mc-caption-bg2 {
-	position:absolute;
-	width:190px;
-	height:auto;
-	padding:20px;
-	right:30px; /* or left: ??px; */
-	bottom:30px;/* or top: ??px; */
-	z-index:3;
-	overflow:hidden;
-	font-size:0;
-    display: none;
-}
-div.mc-caption-bg {
-	background-color:White; /*Caption background color. Can be set to "background:transparent;", or set to semi-transparent through the sliderOptions.captionOpacity setting in the javascript.*/
-	border-radius: 5px;
-}
-div.mc-caption-bg2 {
-    background:none;
-}
-div.mc-caption {
-	font:bold 15px/20px Arial;
-	color:#000000;
-	z-index:4;
-	padding:0px;
-	text-align:center;
-    background:none;
-}
-div.mc-caption a { 
-	color:#66FFFF;
-}
-
-
-
-
-/* ----------- thumbnails ----------- */
-#thumbs 
+#sliderFrame 
 {
-    background:white url(thumbs-bar.gif) repeat-x 0 0; 
-    border:1px solid white; text-align:center; 
-    font-size:0px;
-    line-height:45px;/*Setting the expected height to line-height fixes many IE8 erratic behaviours*/
+    position:relative;
+    background-color:white;
+
+}      
+
+#slider, #slider .sliderInner {
+    width:960px;height:400px;/* Must be the same size as the slider images */
+    border-radius:0px;
 }
-#thumbs .thumb 
+
+#slider 
 {
-    width:60px;height:45px;
+    background-color:white;
+    position:relative;
+    margin:0 auto; /*center-aligned*/
+    transform: translate3d(0,0,0);
+}
+
+/* the link style (if slide image is wrapped by a link) */
+#slider a.imgLink, #slider .video {
+    z-index:2;
     cursor:pointer;
-    text-align:center;
-    border-left:1px solid #FFF; border-right:1px solid #DDD; 
-    
-    display:inline-block;
-    *display:inline;zoom:1; /*IE Hack*/
+    position:absolute;
+    top:0px;left:0px;border:0;padding:0;margin:0;
+    width:100%;height:100%;
 }
-#thumbs .thumb-on {background-image: url(active-bg.png);}
-#thumbs .thumb img {vertical-align:middle;}
-
-
-
+#slider .video {
+    background:transparent url(video.png) no-repeat 50% 50%;
+}
 
 
 /* ------ built-in navigation bullets wrapper ------*/
-div.navBulletsWrapper  {
-	top:420px; left:700px; /* Its position is relative to the #slider. Don't set #slider "overflow:hidden;" if bullets are to be positioned outside of the #slider. */
-	width:150px;
-	background:none;
-	position:relative;
-	z-index:5;
-	cursor:pointer;
+#slider .navBulletsWrapper  {
+    display:none;
 }
 
-/* each bullet */
-div.navBulletsWrapper div 
-{
-    width:11px; height:11px;
-    background:transparent url(bullet.png) no-repeat 0 0;
-    float:left;overflow:hidden;vertical-align:middle;cursor:pointer;
-    margin-right:20px;/* distance between each bullet*/
-    _position:relative;/*IE6 hack*/
+
+/* --------- Others ------- */
+
+#slider img, #slider>b, #slider a>b {
+    position:absolute; border:none; display:none;
 }
 
-div.navBulletsWrapper div.active {background-position:0 -11px;}
+#slider .sliderInner {
+    overflow:hidden;
+    position:absolute; top:0; left:0;
+}
+
+#slider>a, #slider video, #slider audio {display:none;}
+#slider div {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+
 
 
 /*----------- navigation buttons on both sides of the slider -----------*/
-.group1-Wrapper {
+.group1-Wrapper 
+{
     position:absolute;
     z-index:20;
     top:140px;
@@ -135,7 +73,7 @@ div.navBulletsWrapper div.active {background-position:0 -11px;}
 a.group1-Prev, a.group1-Next
 {
     width:50px;height:150px;
-    background:transparent url(navbuttons2.png); 
+    background:transparent url(/angan/images/navbuttons2.png); 
     display:block; 
     cursor:pointer;
     position:absolute;
@@ -151,15 +89,14 @@ a.group1-Prev:hover{background-position:50px 0;}
 a.group1-Next:hover {background-position:50px -150px;}
 
 
-/* ----------- navigation buttons in the thumbnails bar ---------- */
+/* ----------- navigation buttons in the nav bar ---------- */
 a.group2-Prev, a.group2-Next, a.group2-Play, a.group2-Pause 
 {
     width:20px; height:20px; 
     background:transparent url(navbuttons.gif); 
     display:inline-block; 
     *display:inline;zoom:1;/*IE hack*/
-    margin-right:8px;
-    vertical-align:middle;
+    margin-left:4px; margin-right:4px;
     cursor:pointer;
 }
 a.group2-Pause{background-position:0 0;}
@@ -171,16 +108,4 @@ a.group2-Pause:hover{background-position:20px 0;}
 a.group2-Play:hover {background-position:20px -20px;}
 a.group2-Next:hover {background-position:20px -40px;}
 a.group2-Prev:hover {background-position:20px -60px;} 
-
-
-
-
-/* --------- Others ------- */
-#slider 
-{
-	transform: translate3d(0,0,0);
-    -ms-transform:translate3d(0,0,0);
-    -moz-transform:translate3d(0,0,0);
-    -o-transform:translate3d(0,0,0);
-}
 
